--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <selenium.version>4.27.0</selenium.version>
         <webdrivermanager.version>5.9.2</webdrivermanager.version>
         <lombok.version>1.18.36</lombok.version>
+        <h2database.version>2.2.224</h2database.version>
     </properties>
 
     <dependencies>
@@ -49,6 +50,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2database.version}</version>
         </dependency>
     </dependencies>
 
